# sparkle

./: .asoundrc  Android.mk  Makefile  README  TODO  Xwrapper.config  configure  main.cpp  maintainer-clean  push  sparkle.apk  sparkle.h  suppressions  test  utility.h  valgrind
apk/: Makefile  local.properties
apk/app/: build.gradle
apk/app/src/main/: AndroidManifest.xml
apk/app/src/main/cpp/: CMakeLists.txt  main.cpp
apk/app/src/main/java/com/sion/sparkle/: SparkleActivity.java
apk/app/src/main/res/values/: strings.xml
apk/gradle/wrapper/: gradle-wrapper.properties
common/: Makefile  sparkle_client.c  sparkle_client.cpp  sparkle_client.h  sparkle_connection.cpp  sparkle_connection.h  sparkle_packet.c  sparkle_packet.cpp  sparkle_packet.h  sparkle_protocol.cpp  sparkle_protocol.h  sparkle_server.c  sparkle_server.cpp  sparkle_server.h  sparkle_sound_buffer.cpp  sparkle_sound_buffer.h  sparkle_surface.h  sparkle_surface_ashmem.cpp  sparkle_surface_ashmem.h  sparkle_surface_fd.cpp  sparkle_surface_fd.h  sparkle_surface_file.cpp  sparkle_surface_file.h  sparkle_surface_shm.cpp  sparkle_surface_shm.h  utility.h  were_benchmark.cpp  were_benchmark.h
compositor/: compositor.h
compositor/gl/: compositor_gl.cpp  compositor_gl.h  texture.cpp  texture.h
configs/: .asoundrc  xorg-pc.conf  xorg.conf
configs/android-non-root/: .asoundrc  xorg.conf
configs/android-root/: xorg.conf
configs/pc-non-root/: xorg-evdev.conf
configs/termux/: xorg.conf
jni/: Application.mk
keyboard/: Makefile  main.cpp  sparkle_keyboard.cpp  sparkle_keyboard.h
pc/: Makefile.in  aclocal.m4  configure  configure.ac
pc/src/: Makefile.am  Makefile.in  main.cpp
pcm-sparkle/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  config.h.in~  configure  configure.ac  pcm_sparkle.c  sparkles_c.cpp
pcm-sparkle/src/: Makefile.am  Makefile.in  sparkles_c.h
platform/: platform.h
platform/jni/: Makefile.am  configure.ac  platform_jni.cpp  platform_jni.h
platform/na/: platform_na.cpp  platform_na.h  sion_keymap.h
platform/x11/: platform_x11.cpp  platform_x11.h
shm/: shm.c  shm.h
sound/sles/: Makefile  main.cpp  sound_sles.cpp  sound_sles.h
ui/: Makefile  font_default.h  keyboard.cpp  keyboard.h  main.cpp  painter.h  were_painter.cpp  were_painter.h  widget.h  widget_button.cpp  widget_button.h  widget_host.cpp  widget_host.h
were/: Makefile  Makefile.in  configure  configure.ac  main.cpp  were.h  were_call_queue.cpp  were_call_queue.h  were_event_loop.cpp  were_event_loop.h  were_event_source.cpp  were_event_source.h  were_exception.cpp  were_function.h  were_server_unix.cpp  were_server_unix.h  were_signal_handler.cpp  were_signal_handler.h  were_socket_unix.cpp  were_socket_unix.h  were_timer.cpp
were-graphics/: Makefile  were_button.cpp  were_button.h  were_painter.h  were_surface.cpp  were_surface.h  were_widget.cpp  were_widget.h
were/include/were/: were.h  were_call_queue.h  were_event_loop.h  were_event_source.h  were_exception.h  were_function.h  were_server_unix.h  were_signal.h  were_signal_handler.h  were_socket_unix.h  were_socket_unix_message_stream.h  were_stream.h  were_timer.h
were/src/: Makefile.am  Makefile.in  were.h  were_call_queue.cpp  were_event_loop.cpp  were_event_source.cpp  were_exception.cpp  were_exception.h  were_server_unix.cpp  were_server_unix.h  were_signal.cpp  were_signal_handler.cpp  were_socket_unix.cpp  were_socket_unix_message_stream.cpp  were_stream.cpp  were_timer.cpp
xf86-input-sparklei/: Makefile.am  Makefile.in  aclocal.m4  config.h.in~  configure  configure.ac
xf86-input-sparklei/src/: Makefile.am  Makefile.in  sparklei.c  sparklei.h  sparklei_c.cpp  sparklei_c.h
xf86-video-sparkle/: Makefile.am  Makefile.in  aclocal.m4  config.h.in~  configure  configure.ac
xf86-video-sparkle/src/: Makefile.am  Makefile.in  compat-api.h  dummy.h  dummy_cursor.c  dummy_driver.c  sparkle_c.cpp  sparkle_c.h
