#AM_CFLAGS =
#AM_CXXFLAGS =
#AM_CPPFLAGS =

#noinst_LTLIBRARIES = libsiski.la
#libsiski_la_SOURCES = siski.cpp

#libarchsiski_la_LTLIBRARIES = libarchsiski.la
#libarchsiski_ladir = "/home/sion/"
#libarchsiski_la_SOURCES = siski.cpp

#bin_PROGRAMS = siski
#siski_SOURCES = main.cpp

#_LDFLAGS =
#_LIBADD =

AM_CPPFLAGS = -I../include/were

noinst_LTLIBRARIES = libwere.la
libwere_la_SOURCES =				\
	were.h					\
	were_call_queue.cpp			\
	were_call_queue.h			\
	were_event_loop.cpp			\
	were_event_loop.h			\
	were_event_source.cpp			\
	were_event_source.h			\
	were_exception.cpp			\
	were_exception.h			\
	were_function.h				\
	were_server_unix.cpp			\
	were_server_unix.h			\
	were_signal_handler.cpp			\
	were_signal_handler.h			\
	were_socket_unix.cpp			\
	were_socket_unix.h			\
	were_timer.cpp				\
	were_timer.h				\
	were_signal.cpp				\
	were_signal.h				\
	were_stream.cpp				\
	were_stream.h				\
	were_socket_unix_message_stream.cpp	\
	were_socket_unix_message_stream.h
